# ChangeLog for media-plugins/alsa-jack
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/ChangeLog,v 1.45 2005/12/14 15:35:24 fvdpol Exp $

  14 Dec 2005; Frank van de Pol <fvdpol@gentoo.org> alsa-jack-1.0.7.ebuild,
  alsa-jack-1.0.8.ebuild, alsa-jack-1.0.9.ebuild,
  alsa-jack-1.0.10_rc1.ebuild:
  Updated description

  23 Nov 2005; Luis Medinas <metalgod@gentoo.org>
  alsa-jack-1.0.10_rc1.ebuild:
  Stable on amd64. See bug #111968.

  19 Nov 2005; Markus Rothe <corsair@gentoo.org>
  alsa-jack-1.0.10_rc1.ebuild:
  Stable on ppc64; bug #111968

  15 Nov 2005; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-jack-1.0.10_rc1.ebuild:
  Added to ~sparc.

  14 Nov 2005; Luca Barbato <lu_zero@gentoo.org>
  alsa-jack-1.0.10_rc1.ebuild:
  Marked ppc to match linux 2.6.14

  13 Nov 2005; Petteri Räty <betelgeuse@gentoo.org>
  alsa-jack-1.0.10_rc1.ebuild:
  Marked stable on x86 for bug #111968.

  14 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
  alsa-jack-1.0.10_rc1.ebuild:
  Change dependency to accept later versions of alsa-lib, as there's no rc2
  jack plugin yet.

*alsa-jack-1.0.10_rc1 (25 Aug 2005)

  25 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-jack-1.0.10_rc1.ebuild:
  Added ebuild for alsa 1.0.10_rc1.

  21 Jul 2005; Joseph Jezak <josejx@gentoo.org> alsa-jack-1.0.9.ebuild:
  Marked ppc stable.

  20 Jul 2005; Markus Rothe <corsair@gentoo.org> alsa-jack-1.0.9.ebuild:
  Stable on ppc64

  17 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-jack-1.0.9.ebuild:
  Stable amd64, x86.

  07 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -alsa-jack-1.0.9_rc3.ebuild, alsa-jack-1.0.9.ebuild:
  Removing old version.  -sparc 1.0.9

  27 May 2005; Jan Brinkmann <luckyduck@gentoo.org> alsa-jack-1.0.9.ebuild:
  install the README

*alsa-jack-1.0.9 (27 May 2005)

  27 May 2005; Jan Brinkmann <luckyduck@gentoo.org> +alsa-jack-1.0.9.ebuild: