@@ -1,20 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 b6bb18430d96ce43b55a5aaca52f33a5 ChangeLog 5972
+MD5 d192700f652d0bb550d581b4ba781a20 ChangeLog 6136
+MD5 265f379e716aaeee312d14e1a6ecfdcb alsa-jack-1.0.10.ebuild 965
 MD5 b97ebeb41287d8509183370e55b52d23 alsa-jack-1.0.10_rc1.ebuild 961
-MD5 489d8044a96a8e92fbdb6f8180883436 alsa-jack-1.0.7.ebuild 969
 MD5 bd783eaa84e2bc2a133cc7a53ea9fd9b alsa-jack-1.0.8.ebuild 969
 MD5 5975fae950fd103fc45e05d34ffd79f9 alsa-jack-1.0.9.ebuild 927
+MD5 d13e7fe735bca070ae255809e425473e files/digest-alsa-jack-1.0.10 72
 MD5 710222b2590a99aa3468158c0ec9f4b7 files/digest-alsa-jack-1.0.10_rc1 75
-MD5 86565eb0601b611f39adb8f5ad47b622 files/digest-alsa-jack-1.0.7 67
 MD5 46a389b403bc763310e942cc9fc6d7b1 files/digest-alsa-jack-1.0.8 67
 MD5 115de3eba9191ee02931872cba635edf files/digest-alsa-jack-1.0.9 71
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFDoDvbvpz1081QvMkRAsHEAJ4s24Ifcmjhgb6gx6XYFolewI7iyACfbioD
-4vL84pFvpwfQY+0COdxnRmg=
-=zwpH
+iD8DBQFDuaybOpjtAl+gMRURAgmLAJ9zq3FFdt0cFI1IarNByKJGmM1l9wCfT3LN
+OGWfGE2WC2pvyF639LhnfVg=
+=gJbE
 -----END PGP SIGNATURE-----
