@@ -1,0 +1,1 @@
+MD5 f778eb35e652fc3e4b726bb021b1ce9d alsa-plugins-1.0.10.tar.bz2 194840
