@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/alsa-jack
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/ChangeLog,v 1.45 2005/12/14 15:35:24 fvdpol Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/ChangeLog,v 1.46 2006/01/02 22:41:10 eradicator Exp $
+
+*alsa-jack-1.0.10 (02 Jan 2006)
+
+  02 Jan 2006; Jeremy Huddleston <eradicator@gentoo.org>
+  -alsa-jack-1.0.7.ebuild, +alsa-jack-1.0.10.ebuild:
+  Version bump.
 
   14 Dec 2005; Frank van de Pol <fvdpol@gentoo.org> alsa-jack-1.0.7.ebuild,
   alsa-jack-1.0.8.ebuild, alsa-jack-1.0.9.ebuild,
